--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -127,6 +127,11 @@ h3 {
     color: black;
 }
 
+h4 {
+    font-size: 20px;
+    color:#E8ebe4 ;
+}
+
 p {
     /* background-color: white; */
     color: white;
